fixing linter warnings